--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <header>
 <h1>Path of Light Studio</h1>
 </header>
+    <b>Home &nbsp; Classes &nbsp; Schedule &nbsp; Contact </b>
 <nav>
     <a href="index.html"home></a>
     <a href="classes.html"classes></a>
