--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <header>
 <h1>Path of Light Studio</h1>
 </header>
-    <b>Home &nbsp; Classes &nbsp; Schedule &nbsp; Contact </b>
 <nav>
-    <a href="index.html"home></a>
-    <a href="classes.html"classes></a>
-    <a href="schedule.html"schedule></a>
-    <a href="contact.html"contact></a>
+    <a href="index.html"home></a> &nbsp;
+    <a href="classes.html"classes></a> &nbsp;
+    <a href="schedule.html"schedule></a> &nbsp;
+    <a href="contact.html"contact></a> &nbsp;
 </nav>
   <h2> Find Your Inner Light</h2>
   <p> Path of light Yoga Studio provides all levels of yoga practice in a trainquil, peaceful environment. Whether you are new to yoga or an experience practitioner, our dedicated instructors can develop a practice to meet your needs. Let your inner light shine at the Path of Light Yoga Studio!</p>
